--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "NODE_ENV=production babel-node server/app",
     "start:dev": "nodemon --exec babel-node server/app",
     "lint": "eslint --fix server/",
-    "migrate": "sequelize db:migrate",
-    "migrate:undo:all": "sequelize db:migrate:undo:all",
+    "migrate": "npx sequelize db:migrate",
+    "migrate:undo:all": "npx sequelize db:migrate:undo:all",
     "test:dev": "npm run migrate:undo:all && npm run migrate && nyc --reporter=html --reporter=text mocha server/src/test --compilers js:babel-core/register --timeout 50000ms --exit",
     "test": "npm run test:dev",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
