--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=production babel-node server/app",
     "start:dev": "nodemon --exec babel-node server/app",
     "lint": "eslint --fix server/",
-    "migrate": "npx sequelize db:migrate",
+    "migrate": "sequelize db:migrate",
     "migrate:undo:all": "npx sequelize db:migrate:undo:all",
     "seed": "npx sequelize db:seed:all",
     "seed:undo:all": "npx sequelize db:seed:undo:all",
